<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WardList"
    android:orientation="vertical">


    <include
        android:id="@+id/ward_list_toolbar"
        layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|center|center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward1">
                    <ImageView
                        android:id="@+id/wardOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/wardscircle"
                        android:onClick="Ward1"/>
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:text="@string/ward_1"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward2">
                    <ImageView
                        android:id="@+id/wardTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/wardscircle"

                        android:text="@string/ward_2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_2"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward3">
                    <ImageView
                        android:id="@+id/wardThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/wardscircle"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_4"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle"/>
                </LinearLayout>
            </LinearLayout>
            <!--//-->

            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward4">
                    <ImageView
                        android:id="@+id/wardFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/wardscircle"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_4"
                        android:textSize="@dimen/subtitle"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward5">
                    <ImageView
                        android:id="@+id/wardFive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/wardscircle"
                        android:onClick="Ward5"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_5"
                        android:textSize="@dimen/subtitle"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward6">
                    <ImageView
                        android:id="@+id/wardSix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/wardscircle"
                        android:onClick="Ward6"
                        android:text="@string/ward_6"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_6"
                        android:textSize="@dimen/subtitle"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"

                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward7">
                    <ImageView
                        android:id="@+id/wardSeven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/wardscircle"
                        android:text="@string/ward_7"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_7"
                        android:textSize="@dimen/subtitle"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward8">
                    <ImageView
                        android:id="@+id/wardEight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/wardscircle"
                        android:onClick="Ward8"
                        android:text="@string/ward_8"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_8"
                        android:textSize="@dimen/subtitle"
                        android:textAlignment="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="Ward9">
                    <ImageView
                        android:id="@+id/Nine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/wardscircle"
                        android:onClick="Ward9"
                        android:text="@string/ward_9"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_9"
                        android:textSize="@dimen/subtitle"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>