<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chaurideuralimunicipality.Activities.WardActivity">


    <include
        android:id="@+id/ward_list_toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="@dimen/teen_dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="center"
                app:srcCompat="@drawable/map" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/teen_dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wardOne"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ward_1"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wardTwo"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        android:text="@string/ward_2"

                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_2"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward3"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wardThree"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_4"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>
            </LinearLayout>
            <!--//-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/teen_dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward4"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wardFour"
                        android:layout_width="wrap_content"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_4"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wardFive"
                        android:layout_width="wrap_content"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        android:onClick="Ward5"
                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_5"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward6"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wardSix"
                        android:layout_width="wrap_content"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        android:onClick="Ward6"
                        android:text="@string/ward_6"
                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_6"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/teen_dp"
                android:layout_weight="1"

                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward7"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wardSeven"
                        android:layout_width="wrap_content"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        android:text="@string/ward_7"
                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_7"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward8"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wardEight"
                        android:layout_width="wrap_content"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        android:text="@string/ward_8"
                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ward_8"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Ward9"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/Nine"
                        android:layout_width="wrap_content"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        android:onClick="Ward9"
                        android:text="@string/ward_9"
                        app:srcCompat="@drawable/wardscircle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ward_9"
                        android:textAlignment="center"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>